--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,23 @@ li {
     display: block;
 }
 
-
+@media(max-width:375px){
+    .display-3{
+        font-size: 2.5rem;
+    }
+    h2{
+        font-size: 1.8rem;
+    }
+    span{
+        font-size: 0.7rem;
+    }
+    li{
+        font-size: 1rem;
+    }
+    p{
+        font-size: 1rem;
+    }
+}
 
 
 
